--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   get: ^3.26.0
   stripe_payment: ^1.0.10
   image_picker: ^0.6.7+22
+  fluttertoast: ^7.1.8
+
 
   image_cropper: ^1.3.1
   super_tooltip: ^0.9.6
