--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,13 +5,21 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="trollyproject"
         android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
+
+
 
 
     >
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -47,5 +55,11 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+
+        <uses-library
+                android:name="org.apache.http.legacy"
+                android:required="false" />
+
     </application>
 </manifest>
