--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  country_code_picker: ^2.0.1
+
   intl: ^0.17.0
   get: ^3.26.0
   stripe_payment: ^1.0.10
   image_picker: ^0.6.7+22
   fluttertoast: ^7.1.8
-
-
+  url_launcher: ^5.7.10
+  country_list_pick: ^1.0.1+4
   image_cropper: ^1.3.1
   super_tooltip: ^0.9.6
+  shared_preferences: ^2.0.5
   speech_bubble: ^0.0.7
   dio: ^3.0.10
 
@@ -44,6 +47,9 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
+
+    sdk: flutter
+  flutter_localizations: # Add this line
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
